# lambda-lib

./: .clang-format  .gitignore
src/lambdalib/: apply_visitor.hpp  definitions.hpp  lambdalib.hpp  nodes.hpp  parser.hpp  print_visitor.hpp  reduce_visitor.hpp  visitor.hpp
tests/: CMakeLists.txt  basic_op.cpp  input_solver.cpp  step_input_solver.cpp  write.cpp
